--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="/Users/laurianeglessner/Desktop/SBCC/activity_5_copy/problem.html">The Problem</a></li>
+        <li><a href="problem.html">The Problem</a></li>
         <li><a href="#">Our Solution</a></li>
         <li><a href="#">Call to Action</a></li>
         <li><a href="#">Resources</a></li>
