--- a/problem.html
+++ b/problem.html
@@ -7,11 +7,21 @@
 <!--[if lt IE 9]><script src="scripts/html5shiv.js"></script><![endif]-->
 </head>
 <body>
-<div class="wrapper row1">
-  <header id="header" class="clear">
-    <h1>The Problem</h1>
-  </header>
-</div>
+  <div class="wrapper row1">
+    <header id="header" class="clear">
+      <div id="hgroup">
+        <h1><a href="index.html">Let's Curb Food Waste</a></h1>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="problem.html">The Problem</a></li>
+          <li><a href="#">Our Solution</a></li>
+          <li><a href="#">Call to Action</a></li>
+          <li><a href="#">Resources</a></li>
+        </ul>
+      </nav>
+    </header>
+  </div>
 <!-- ####################################################################################################### -->
 <div class="wrapper row2">
   <div id="container" class="clear">
@@ -19,7 +29,7 @@
     <p>The current warming trend is of particular significance because it is unequivocally the result of human activity since the mid-20th century and proceeding at a rate that is unprecedented over millennia. It is undeniable that human activities have warmed the atmosphere, ocean, and land and that widespread and rapid changes in the atmosphere, ocean, cryosphere, and biosphere have occurred.</p>
     <p>Other observations of recent climate change include: a global average sea level rise of 8 inches since the late 19th century; declining sea ice, ice sheet, and glacier size; changing patterns in rain and snowfall; decreased snow cover and longer frost-free seasons; and more frequent high-temperature records being set in recent years and decades. Contributing factors to sea level rise include the expansion of ocean water as it warms and the melting of glaciers and ice sheets. Satellite observations have suggested that the rate of sea level rise globally since 1992 has been twice as rapid as during the previous century. An additional side-effect from rising carbon dioxide concentrations is that the surface ocean has become approximately 30% more acidic since the late 19th century, which may have strong negative effects on sea life.</p>
 
-    <figure><img src="https://avaazdo.s3.amazonaws.com/3f6e0141314dd6089d8e50db7f0f2285.jpeg" width="450" height="270" alt="" class="center">
+    <figure><img class="center" src="https://avaazdo.s3.amazonaws.com/3f6e0141314dd6089d8e50db7f0f2285.jpeg" width="450" height="270" alt="" class="center">
    
         <p> Food waste is an enormous global problem. Non-profit organization Project Drawdown has said that if it were a standalone country, it would place third after the United States and China in terms of impact on global warming. Striving to reduce food waste is, to quote Project Drawdown's vice-president and research director Chad Frischmann, "one of the most important things we can do to reverse global warming."
     <p>Estimates for how much food gets wasted range from 14% to 40% of total calories raised for human consumption, contributing 8% (or 3.3 gigatonnes) of global greenhouse gas emissions. Much of the waste occurs before food arrives at the grocery store, as it's moving through a vast and complex supply chain (a.k.a. the cold chain). </p>
