--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     <nav>
       <ul>
         <li><a href="problem.html">The Problem</a></li>
-        <li><a href="#">Our Solution</a></li>
-        <li><a href="#">Call to Action</a></li>
-        <li><a href="#">Resources</a></li>
+        <li><a href="solution.html">Our Solution</a></li>
+        <li><a href="calltoaction.html">Call to Action</a></li>
       </ul>
     </nav>
   </header>
@@ -63,7 +62,8 @@
           <figure><img src="https://cdn-a.william-reed.com/var/wrbm_gb_food_pharma/storage/images/publications/food-beverage-nutrition/foodnavigator.com/article/2019/05/07/ec-adopts-common-methodology-to-track-food-waste/9447224-1-eng-GB/EC-adopts-common-methodology-to-track-food-waste_wrbm_large.jpg" width="290" height="180" alt="">
             <figcaption>
               <h2>Call to Action</h2>
-              <p>The causes of food losses and waste in high-income countries mainly relate to consumer behavior as well as to a lack of coordination between different actors in the supply chain. In addition to the food waste at productional level, there is a challenge in changing habits among consumers to bring down food waste. </p>
+              <p>In order to help the food waste cause and make a global impact: reduce (use less of — or do without — unnecessary ingredients and cook smaller portions to avoid excessive leftovers),
+                reuse (repurpose food scraps instead of throwing them out and use reusable containers to buy foods in bulk), and recycle (compost leftover food scraps). </p>
               <footer class="more"><a href="#">Read More &raquo;</a></footer>
             </figcaption>
           </figure>
@@ -81,18 +81,26 @@
     <!-- / content body -->
   </div>
 </div>
+
 <!-- Footer -->
-<div class="wrapper row3">
-  <div id="footer" class="clear">
-  
-    <!-- / Section -->
+
+<body>
+  <div class="footer-basic">
+      <footer>
+
+          <ul class="list-inline">
+              <li class="list-inline-item"><a href="index.html">Home</a></li>
+              <li class="list-inline-item"><a href="problem.html">The Problem</a></li>
+              <li class="list-inline-item"><a href="solution.html">Our Solution</a></li>
+              <li class="list-inline-item"><a href="calltoaction.html">Call to Action</a></li>
+          </ul>
+
+          <div class="image">
+            <img src="https://www.pinclipart.com/picdir/big/574-5743928_social-media-icons-social-media-social-media-logo.png" width="120" height="70" alt="">
+          </div>
+
+          <p class="copyright">Food For Thought © 2021</p>
+      </footer>
   </div>
-</div>
-<!-- Copyright -->
-<div class="wrapper row4">
-  <footer id="copyright" class="clear">
-    <p class="fl_left">Copyright &copy; 2021 - All Rights Reserved - <a href="#">Just Eat It.</a></p>
-  </footer>
-</div>
 </body>
 </html>
